--- a/FrontEnd/src/assets/scss/global/_bootstrap.scss
+++ b/FrontEnd/src/assets/scss/global/_bootstrap.scss
@@ -51,3 +51,12 @@ $modal-default-margin: map-get($spacers, 3);
 .invalid-feedback {
   text-align: right;
 }
+
+// Changing the indicator of the carousel to dot instead of a default rectangle
+.carousel-indicators li {
+  background-color: #E7936D;
+  //background-image: url('../../icons/carousel/dotCarousel.svg');
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+}
