change css unit to rem

--- a/FrontEnd/src/components/Layout/Layout.module.scss
+++ b/FrontEnd/src/components/Layout/Layout.module.scss
@@ -1,6 +1,6 @@
 
 .layout {
-    margin-right: 100px;
-    margin-left: 100px;
+    margin-right: 6.25rem;
+    margin-left: 6.25rem;
     margin-top: $filter-top-margin;
   }
