--- a/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
+++ b/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
@@ -5,12 +5,12 @@
   background-color: #FFFFFF;/*$secondary-1-color;*/
   border-radius: 0.5rem; // TODO make variable
   overflow: hidden;
-  height: 270px; //temporary, might remove later
-  box-shadow: 0 6px 10px 0 rgba(black, .14); //elevation 06dp
+  height: 16.875rem; //temporary, might remove later
+  box-shadow: 0 0.4rem 0.6rem 0 rgba(black, .14); //elevation 06dp
 }
 
 .pic {
-  height: 270px;
+  height: 16.875rem;
   overflow: hidden;
   padding: 0;
   
@@ -22,7 +22,7 @@
 }
 
 .textPortion{
-  margin-left: 8px;
+  margin-left: 0.5rem;
   font-family: Montserrat;
 }
 
@@ -31,32 +31,31 @@
   margin: 0;
 }
 
+.day{
+  margin: 0.3rem 0 1.5rem 0;
+  color:#AAAAAA;
+  font-size: 0.8rem
+}
+
 .price{
-  margin-bottom: 24px;
+  margin-bottom: 1.5rem;
   color: #A64919;
 
   b{
-    font-size: 20px;
+    font-size: 1.6rem;
   }
 }
 
-
-.day{
-  margin: 5px 0 24px 0;
-  color:#AAAAAA;
-  font-size: 12px
-}
-
 .distance {
-  margin-bottom: 8px;
-  font-size: 13px
+  margin-bottom: 0.5rem;
+  font-size: 1rem
 }
 
 .address{
-  margin-bottom: 30px;
+  margin-bottom: 1.8rem;
   display: flex;
-  font-size: 13px;
-  gap: 5px;
+  font-size: 0.85rem;
+  gap: 0.4rem;
 
   div{
     height: 100%;
@@ -64,16 +63,16 @@
 }
 
 .locationIcon{
-  margin-top: 1rem;
+  margin-top: 0.5rem;
 }
 
 .room{
-  margin-bottom: 8px;
-  font-size: 13px;
+  margin-bottom: 0.5rem;
+  font-size: 0.9rem;
   color: #797979
 }
 
 .date{
-  font-size: 13px;
+  font-size: 0.9rem;
   color: #797979
 }
