--- a/FrontEnd/src/components/Profile/Profile.module.scss
+++ b/FrontEnd/src/components/Profile/Profile.module.scss
@@ -1,26 +1,54 @@
-
-
 // TODO: abstract common code from this and WizardForm to theme.scss
 $profile-form-middle-height: 90%;
 
-.topBar {
+.selectionList {
   width: 100%;
   height: 5%;
-  display: flex;
   border-radius: $lg-border-radius $lg-border-radius 0 0;
   justify-content: center;
   margin-top: 2vh;
 }
 
-.title {
-  @include font-type('secondary-title');
-  font-weight: $regular-font-weight;
-  color: $secondary-dark-color;
+.titleNotSelected {
+  height: 3rem;
+  margin-top: 1rem;
+  font-weight: 600;
+  font-size: $md-font-size;
+  color: rgba(32, 32, 32, 0.6);
+  display: flex;
+}
+
+.titleSelected{
+  height: 3rem;
+  margin-top: 1rem;
+  font-weight: 600;
+  font-size: $md-font-size;
+  color: #E37F4E;
+  display: flex;
+}
+
+.selectOn{
+  color: #E37F4E;
+}
+
+.selectOff{
+  color: rgba(32, 32, 32, 0.6);
+}
+
+.selectItem{
+  padding-top: 0.25rem;
 }
 
 .divider {
-  color: $secondary-1-color;
-  font-size: x-large;
+  height: 45px;
+  width: 5px;
+  background-color: #E37F4E;
+  border-radius: 6.5rem;
+  margin: 0 1.5rem;
+}
+
+.dividerOff{
+  visibility: hidden;
 }
 
 .element {
@@ -38,8 +66,8 @@ $profile-form-middle-height: 90%;
   left: 42px;
 }
 
-.profileSelected {
-  font-weight: bold !important;
+.mypost {
+  color:#a6623f;
 }
 
 .profile-selected-under {
@@ -88,7 +116,7 @@ $profile-form-middle-height: 90%;
   line-height: normal;
   letter-spacing: normal;
   text-align: left;
-  color: $primary-input-color;
+  color: black;
 }
 
 .bio {
@@ -131,6 +159,12 @@ $profile-form-middle-height: 90%;
 
 .editWrap {
   height: 85px;
+}
+
+.smallText{
+  font-size: 12px;
+  margin-left: 0.5rem;
+  font-weight: normal;
 }
 
 .icon {
