--- a/FrontEnd/src/components/basics/ToggleGroup/ToggleGroup.module.scss
+++ b/FrontEnd/src/components/basics/ToggleGroup/ToggleGroup.module.scss
@@ -11,11 +11,15 @@
 }
 
 .label {
-  @include font-type('label-text');
+  @include font-type('subtitle 1');
+
+  color: $primary-dark-color;
 }
 
 .error {
-  @include font-type('error-label-text');
+  @include font-type('caption');
+
+  color: $error-color;
 }
 
 .lineUpToggle:first-child {
