--- a/FrontEnd/src/components/Filter/Filter.module.scss
+++ b/FrontEnd/src/components/Filter/Filter.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  border: $darker-background-color solid 3px;
+  border: $primary-100-color solid 3px;
   box-shadow: 2px 4px 8px rgba(164, 97, 62, 0.3);
   border-radius: 22px;
   margin-bottom: 5vh;
