--- a/FrontEnd/src/components/HouseProfile/GeneralInfo/GeneralInfo.module.scss
+++ b/FrontEnd/src/components/HouseProfile/GeneralInfo/GeneralInfo.module.scss
@@ -1,47 +1,46 @@
-
 .container{
-    max-width: 100%;
-    margin: 0;
+  max-width: 100%;
+  margin: 0;
 }
 
 .pic{
-    overflow: hidden;
-    padding: 0;    
-    //height: 476px; Don't include the height to make it responsive
-    @include bp-down('sm') {
-        height: 16.875rem;
-    }
+  overflow: hidden;
+  padding: 0;    
+  @include bp-down('sm') {
+    height: 16.875rem;
+  }
 }
 
 .day{
-    margin-bottom: 14px;
+  margin-bottom: 14px;
 }
 
 .name{
-    @include font-type('price-related-large');
-    margin-bottom: 8px;
+  @include font-type('h4');
+  color: $primary-900-color;
+  margin-bottom: 8px;
 }
 
 .address{
-    display: flex;
-    font-size: 1rem;
-    gap: 0.4rem;
-  
-    div{
-      height: 100%;
-    }
+  display: flex;
+  font-size: 1rem;
+  gap: 0.4rem;
+
+  div{
+    height: 100%;
   }
+}
 
 .distance{
-    margin-bottom: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .map{
-    min-width: 500px;
-    height: 300px;
-    padding-left: 0 !important;  
+  min-width: 500px;
+  height: 300px;
+  padding-left: 0 !important;  
 }
 
 .textPortion{
-    margin-left: 0.5rem;
+  margin-left: 0.5rem;
 }
