--- a/FrontEnd/src/components/NavBar/NavBar.module.scss
+++ b/FrontEnd/src/components/NavBar/NavBar.module.scss
@@ -16,11 +16,10 @@
 }
 
 .navBtn {
-  @include font-type('special');
   display: flex;
   align-items: flex-end;
   letter-spacing: 0.2em;
-  color: $secondary-color !important;
+  color: $secondary-dark-color !important;
 }
 
 .container {
