--- a/FrontEnd/src/components/basics/Dropdown/Dropdown.module.scss
+++ b/FrontEnd/src/components/basics/Dropdown/Dropdown.module.scss
@@ -11,13 +11,15 @@
 .root { // used only for specificity to override bootstrap css
   .moreSpecificity { // similarly needed to override bootstrap css specificity (still looking for a better solution than this...)
     .unfilled {
-      @include font-type('primary-input-text');
-      border: 2px solid $primary-3-color;
+      @include font-type('body 1');
+      color: $primary-light-color;
+      border: 2px solid $primary-100-color;
       border-radius: $input-border-radius;
       box-shadow: none !important; // TODO set the flag in bootstrap instead of doing this
 
       &:focus {
-        @include font-type('primary-input-text');
+        @include font-type('body 1');
+        color: $primary-light-color;
         border-color: $primary-light-color;
       }
 
@@ -39,22 +41,26 @@
     // TODO is this used?
     .dropdown-readonly {
       @extend .filled;
-      background-color: $primary-2-color !important;
+      background-color: $primary-50-color !important;
     }
 
     .label {
-      @include font-type('label-text');
+      @include font-type('subtitle 1');
+      color: $primary-dark-color;
     }
 
     .inlineText {
-      @include font-type('label-text');
+      @include font-type('subtitle 1');
 
+      color: $primary-dark-color;
       margin-left: 15px;
       align-self: center;
     }
 
     .error {
-      @include font-type('error-label-text');
+      @include font-type('caption');
+
+      color: $error-color;
     }
 
     .straightenRight {
@@ -69,7 +75,7 @@
     }
 
     .dropBtnUnfilled {
-      background-color: $primary-3-color;
+      background-color: $primary-100-color;
     }
 
     .dropBtnFilled {
@@ -115,17 +121,17 @@
       .dropdown-menu {
         max-height: 200px;
         overflow-y: auto;
-        background-color: $primary-1-color;
+        background-color: $background-color;
 
         .dropdown-item {
-          background-color: $primary-1-color;
+          background-color: $background-color;
           color: $primary-dark-color;
 
           &:active,
           &.active,
           &:hover,
           &:focus {
-            background-color: $primary-2-color;
+            background-color: $primary-50-color;
           }
         }
       }
