--- a/FrontEnd/src/components/basics/Input/Input.module.scss
+++ b/FrontEnd/src/components/basics/Input/Input.module.scss
@@ -9,14 +9,16 @@
 
 .root { // used only for specificity to override bootstrap css
   .unfilled {
-    @include font-type('primary-input-text');
-    border: 2px solid $primary-3-color;
+    @include font-type('body 1');
+    color: $primary-light-color;
+    border: 2px solid $primary-100-color;
     border-radius: $input-border-radius;
     box-shadow: none !important; // TODO set the flag in bootstrap instead of doing this
     background-color: white !important;
 
     &:focus {
-      @include font-type('primary-input-text');
+      @include font-type('body 1');
+      color: $primary-light-color;
       border-color: $primary-light-color;
     }
   }
@@ -34,21 +36,26 @@
   }
 
   .readOnly {
-    background-color: $primary-2-color !important;
+    background-color: $primary-50-color !important;
   }
 
   .label {
-    @include font-type('label-text');
+    @include font-type('subtitle 1');
+
+    color: $primary-dark-color;
   }
 
   .inlineText {
-    @include font-type('label-text');
+    @include font-type('subtitle 1');
 
+    color: $primary-dark-color;
     margin-left: 15px;
     align-self: center;
   }
 
   .error {
-    @include font-type('error-label-text');
+    @include font-type('caption');
+
+    color: $error-color;
   }
 }
