--- a/FrontEnd/src/components/basics/WizardForm/WizardForm.module.scss
+++ b/FrontEnd/src/components/basics/WizardForm/WizardForm.module.scss
@@ -2,7 +2,7 @@
   $wizard-form-middle-height: 90%;
 
   .topBar {
-    background-color: $primary-2-color;
+    background-color: $primary-50-color;
     width: 100%;
     height: (100% - $wizard-form-middle-height) / 2;
     display: flex;
@@ -12,7 +12,8 @@
   }
 
   .title {
-    @include font-type('secondary-title');
+    @include font-type('h4');
+    color: $primary-dark-color;
     font-weight: $regular-font-weight; // TODO make a font type for this
   }
 
