converted everything to use new custom button component

--- a/FrontEnd/src/assets/scss/utils/_mixins.scss
+++ b/FrontEnd/src/assets/scss/utils/_mixins.scss
@@ -110,6 +110,6 @@
 }
 
 @mixin rounded-pill {
-  border-radius: 50rem;
+  border-radius: 5000rem; // overloading border-radius results in a "pill like" shape
 }
 
