--- a/FrontEnd/src/components/OldHouseProfile/FirstColumn/FirstColumn.module.scss
+++ b/FrontEnd/src/components/OldHouseProfile/FirstColumn/FirstColumn.module.scss
@@ -4,15 +4,7 @@
   position: absolute;
   border-radius: 50%;
   z-index: 2;
-  margin: 10px 0px 0px 10px !important;
-
-  &:hover {
-    margin: 10px 0px 0px 10px !important;
-  }
-
-  @include mousedown {
-    margin: 10px 0px 0px 10px !important;
-  }
+  margin: 10px 0px 0px 10px;
 }
 
 .slideshow {
