--- a/FrontEnd/src/assets/scss/global/_theme.scss
+++ b/FrontEnd/src/assets/scss/global/_theme.scss
@@ -46,3 +46,23 @@ body {
     box-shadow: none;
   }
 }
+
+h1 {
+  @include font-type('h1');
+}
+
+h2 {
+  @include font-type('h2');
+}
+
+h3 {
+  @include font-type('h3');
+}
+
+h4 {
+  @include font-type('h4');
+}
+
+h5 {
+  @include font-type('h5');
+}
