--- a/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
+++ b/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
@@ -57,22 +57,27 @@
   font-size: 1rem
 }
 
-.address{
+.address {
+  $line-height: 1.275rem;
+
   margin-bottom: 1.8rem;
   display: flex;
   font-size: 0.85rem;
   gap: 0.4rem;
+  // line-height: $line-height;
+  // height: $line-height * 2;
 
-  div{
+  div {
     height: 100%;
+    display: flex;
+  }
+
+  .locationIcon {
+    align-self: center;
   }
 }
 
-.locationIcon{
-  margin-top: 0.5rem;
-}
-
-.room{
+.oom{
   margin-bottom: 0.5rem;
   font-size: 0.9rem;
   color: #797979
