--- a/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
+++ b/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
@@ -47,7 +47,7 @@
   margin-bottom: 1.5rem;
   color: #A64919;
 
-  b{
+  b {
     font-size: 1.6rem;
   }
 }
@@ -64,8 +64,10 @@
   display: flex;
   font-size: 0.85rem;
   gap: 0.4rem;
-  // line-height: $line-height;
-  // height: $line-height * 2;
+  overflow: hidden;
+  // set the height to be 2x the line-height, resulting in only 2 lines being displayed
+  line-height: $line-height;
+  height: $line-height * 2;
 
   div {
     height: 100%;
@@ -73,7 +75,7 @@
   }
 
   .locationIcon {
-    align-self: center;
+    align-items: center;
   }
 }
 
