--- a/FrontEnd/src/components/basics/Link/Link.module.scss
+++ b/FrontEnd/src/components/basics/Link/Link.module.scss
@@ -1,3 +1,12 @@
 .link {
   @include font-type('link');
 }
+
+.undecoratedLink {
+  &, & a {
+    @include font-type('link');
+
+    color: black;
+    text-decoration: none;
+  }
+}
