--- a/FrontEnd/src/components/Profile/Profile.module.scss
+++ b/FrontEnd/src/components/Profile/Profile.module.scss
@@ -92,8 +92,8 @@ $profile-form-middle-height: 90%;
 }
 
 .name {
-  height: fit-content;
   width: 100%;
+  height: 25px;
   font-family: Montserrat;
   font-size: $lg-font-size;
   font-weight: bold;
