--- a/FrontEnd/src/components/NavBar/NavBar.module.scss
+++ b/FrontEnd/src/components/NavBar/NavBar.module.scss
@@ -18,8 +18,15 @@
 .navBtn {
   display: flex;
   align-items: flex-end;
-  letter-spacing: 0.2em;
+  // letter-spacing: 0.2em;
   color: $secondary-dark-color !important;
+}
+
+.landingNavBtn {
+  display: flex;
+  align-items: flex-end;
+  // letter-spacing: 0.2em;
+  color: white !important;
 }
 
 .container {
