--- a/FrontEnd/src/components/HouseProfile/ApplicationDetails/ApplicationDetails.module.scss
+++ b/FrontEnd/src/components/HouseProfile/ApplicationDetails/ApplicationDetails.module.scss
@@ -3,7 +3,7 @@
     &::before {
         content:"";
         position: absolute;
-        border-bottom:2px solid $primary-100-color; /*use this to adjust underlin color and size*/
+        border-bottom:0.125rem solid $primary-100-color; /*use this to adjust underlin color and size*/
         width:100%;  /*use this to adjust underline width*/
         height:1.1em; /*use this to adjust underline position*/
     }
@@ -17,7 +17,7 @@
 }
 
 .application-component{
-    min-height:150px;
+    min-height:9.375rem;
 }
 
 .proofOfIncome {
@@ -28,12 +28,12 @@
   min-height: 15.5rem;
 
   /* Yellow */
-  box-shadow: -5px 5px $highlight-color; // TODO
-  border: 2px solid $highlight-color; // TODO
+  box-shadow: -0.3125rem 0.3125rem $highlight-color; // TODO
+  border: 0.125rem solid $highlight-color; // TODO
 
   .small-subtitle {
     @include font-type('h5');
-    margin-left:10px;
+    margin-left:0.625rem;
   }
 
   .proof-of-income-inner{
@@ -42,6 +42,6 @@
   }
 
   .profile-icon{
-      margin-left:55px;
+      margin-left:3.4375rem;
   }
 }
