updated container/columns to not have padding by default

--- a/FrontEnd/src/assets/scss/global/_bootstrap.scss
+++ b/FrontEnd/src/assets/scss/global/_bootstrap.scss
@@ -56,3 +56,14 @@ $modal-default-margin: map-get($spacers, 3);
   width: 10px;
   border-radius: 50%;
 }
+
+// Override padding and margin of container and col in bootstrap
+// (do so for columns by including .no-gutters in row)
+.container {
+  margin: 0;
+  padding: 0;
+}
+
+.row {
+  @extend .no-gutters;
+}
