--- a/FrontEnd/src/components/Footer/Footer.module.scss
+++ b/FrontEnd/src/components/Footer/Footer.module.scss
@@ -2,6 +2,7 @@
   width: 100%;
   background-color: $primary-50-color;
   padding: 3rem 5rem;
+  margin-top: $filter-top-margin;
 }
 
 // provides margin bottom to every child except last one
