made icon circular

--- a/FrontEnd/src/assets/scss/utils/_mixins.scss
+++ b/FrontEnd/src/assets/scss/utils/_mixins.scss
@@ -88,3 +88,8 @@
 @mixin rounded-pill-shape {
   border-radius: 5000rem; // overloading border-radius results in a "pill like" shape
 }
+
+// NOTE: width and height must be the same for this to be circular
+@mixin circular-shape {
+  border-radius: 50%;
+}
