--- a/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
+++ b/FrontEnd/src/components/HouseCardList/HouseCard.module.scss
@@ -32,15 +32,16 @@
   font-family: Montserrat;
 }
 
-.secondCol{
+.secondCol {
   padding: 0;
   margin: 0;
+  cursor: pointer;
 }
 
 .day{
   margin: 0.3rem 0 1.5rem 0;
   color:#AAAAAA;
-  font-size: 0.8rem
+  font-size: 0.8rem;
 }
 
 .price{
@@ -54,7 +55,7 @@
 
 .distance {
   margin-bottom: 0.5rem;
-  @include font-type('body 1')
+  @include font-type('body 1');
 }
 
 .address {
@@ -82,10 +83,11 @@
 .oom{
   margin-bottom: 0.5rem;
   font-size: 0.9rem;
-  color: #797979
+  color: #797979;
 }
 
-.date{
+.date {
   font-size: 0.9rem;
-  color: #797979
+  color: #797979;
+  margin-bottom: 0.25rem;
 }
