--- a/FrontEnd/src/components/NavBar/NavBar.module.scss
+++ b/FrontEnd/src/components/NavBar/NavBar.module.scss
@@ -1,5 +1,3 @@
-
-
 .wrapper {
   background-color: white;
   box-shadow: 0 4px 10px 0 rgba(199, 131, 95, 0.1);
@@ -18,21 +16,13 @@
 .navBtn {
   display: flex;
   align-items: flex-end;
-  // letter-spacing: 0.2em;
-  color: $secondary-dark-color !important;
-}
-
-.landingNavBtn {
-  display: flex;
-  align-items: flex-end;
-  // letter-spacing: 0.2em;
   color: white !important;
 }
 
 .container {
   display: flex;
   align-items: center;
-  margin: 0 $entire-site-margin-x;;
+  margin: 0 $entire-site-margin-x;
   width: 100%;
   height: $navbar-height;
 }
