trim landing page by adding max width 100% to container to avoid weird margin, might need to add max width property globally

--- a/FrontEnd/src/components/LandingPage/LandingPage.module.scss
+++ b/FrontEnd/src/components/LandingPage/LandingPage.module.scss
@@ -64,6 +64,13 @@
   .buttonInner {
     margin: inherit;
   }
+
+  .buttonLink {
+    text-decoration: none;
+    &:hover {
+      
+    }
+  }
   
   .smallRow {
     justify-content: center;
@@ -117,4 +124,8 @@
     margin-bottom: 0.3rem;
     border-radius: 50%;
     display: inline-block;
+  }
+
+  .container{
+    max-width: 100%;
   }
